// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-rn-jsx-border-grid test suite test @showGrid and no style 1`] = `
"
/*
@showGrid
*/
const Hello = () => <View style={{
  borderWidth: 1,
  borderColor: \\"#FF7F50\\",
  borderStyle: \\"dotted\\"
}}>
      <Text style={{
    borderWidth: 1,
    borderColor: \\"#FF00FF\\",
    borderStyle: \\"dotted\\"
  }}>hello world</Text>
    </View>;"
`;

exports[`babel-plugin-rn-jsx-border-grid test suite test @showGriud and has ref style 1`] = `
"
/*
@showGrid
*/
const Hello = () => <View style={[styles.container, {
  borderWidth: 1,
  borderColor: '#00FF00',
  borderStyle: 'dotted'
}]}>
      <Text style={[styles.text, hasBackground && { backgroundColor: 'yellow' }, {
    borderWidth: 1,
    borderColor: '#FFD700',
    borderStyle: 'dotted'
  }]}>
        hello world
      </Text>
    </View>;"
`;

exports[`babel-plugin-rn-jsx-border-grid test suite test @showGriud and has style 1`] = `
"
/*
@showGrid
*/
const Hello = () => <View style={[{ flex: 1 }, {
  borderWidth: 1,
  borderColor: '#FF1493',
  borderStyle: 'dotted'
}]}>
      <Text style={[{ color: 'yellow' }, {
    borderWidth: 1,
    borderColor: '#FF1493',
    borderStyle: 'dotted'
  }]}>hello world</Text>
    </View>;"
`;

exports[`babel-plugin-rn-jsx-border-grid test suite test no @showGrid 1`] = `
"
const Hello = () => <View>
        <Text>hello world</Text>
      </View>;"
`;
